Profiling Report function

--- a/EDA_Scoring.ipynb
+++ b/EDA_Scoring.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e2942604",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c6d0f0b5",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "'/home/juanpalms/Desktop/Mineria de Datos/Proyecto'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "464e5db7",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_16189/2775519410.py:1: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_46915/2775519410.py:1: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  datos_train=pd.read_csv('Data/train.csv')\n"
      ]
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "80b2385b",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "5d6a37bb",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "max                   50.000000         82331.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "a2053672",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "a3ba1fea",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
        "Name: Month, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "b642599d",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "9bcc9c74",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "26a44388",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "max                   49.564519         82122.000000  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "2e322582",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "2a4056aa",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "cb6962d3",
    "metadata": {},
    "outputs": [],
@@ -595,14 +595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "c33ccb24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bcaa8bf1a5e4a6e8354734e923086d9",
+       "model_id": "a9f0b0343ca84074ac1cf513c5098706",
        "version_major": 2,
        "version_minor": 0
       },
@@ -616,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd3aa63c093a4eb0b7a2c4ebf4497f18",
+       "model_id": "245bb3eacc9f401b8f0639e37b822b2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -630,7 +630,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81780d2b87b74fb383b55ce07a24a3bb",
+       "model_id": "63a7445199e74aa3bd3af69e7bf95d0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -644,7 +644,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d410f1852028417e87871d58e93f9506",
+       "model_id": "fc4d3ce7a1674513a774a5a2a2839b04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -666,6 +666,22 @@
    "metadata": {},
    "source": [
     "## Data Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cf3e4df",
+   "metadata": {},
+   "source": [
+    "1) lidiar con:\n",
+    "- Num_Credit_Card\n",
+    "- Interest_Rate\n",
+    "- Num_of_Loan\n",
+    "- Type_of_Loan\n",
+    "- Num_Credit_Inquiries\n",
+    "\n",
+    "\n",
+    "2) "
    ]
   },
   {
