Limpieza de Datos

--- a/EDA_Scoring.ipynb
+++ b/EDA_Scoring.ipynb
@@ -262,7 +262,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "6de1b6ea",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -383,35 +385,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "88034348",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    100000.000000\n",
-       "mean       1426.220376\n",
-       "std        1155.129026\n",
-       "min           0.230000\n",
-       "25%         566.072500\n",
-       "50%        1166.155000\n",
-       "75%        1945.962500\n",
-       "max        4998.070000\n",
-       "Name: Outstanding_Debt, dtype: float64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datos_train[\"Outstanding_Debt\"].describe()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b8e63ab5",
    "metadata": {},
@@ -421,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "e77ec5a1",
    "metadata": {},
    "outputs": [],
@@ -442,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "07542620",
    "metadata": {},
    "outputs": [],
@@ -452,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b619f0df",
    "metadata": {},
    "outputs": [],
@@ -514,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "3a13ed89",
    "metadata": {},
    "outputs": [
@@ -747,7 +720,7 @@
        "[12500 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "d11cd842",
    "metadata": {},
    "outputs": [],
@@ -839,9 +812,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f57e4059",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -877,9 +852,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "27d45c79",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -907,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "a1d64614",
    "metadata": {},
    "outputs": [
@@ -945,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "2910b579",
    "metadata": {},
    "outputs": [
@@ -953,7 +930,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Salario Mensual\n",
+      "Numero de cuentas \n",
       "Maximum value: 10.0\n",
       "Minimum value -1.0\n",
       "Quantiles:\n",
@@ -975,7 +952,7 @@
    "source": [
     "#checamos un poquito como quedaron las estadisticas de la moda para ver que no tenemos cosas extranias\n",
     "#NUMBER_BANK_ACCOUNTS\n",
-    "print('Salario Mensual\\nMaximum value: {}\\nMinimum value {}\\nQuantiles:\\n{}\\nNumber of non-missing modes: {}\\n'\n",
+    "print('Numero de cuentas \\nMaximum value: {}\\nMinimum value {}\\nQuantiles:\\n{}\\nNumber of non-missing modes: {}\\n'\n",
     "      .format(mode_account.max(), mode_account.min(),mode_account.quantile([.1,.2,.3,.4,.5,.6,.7,.8,.9]),mode_account.count().sum()))\n",
     "#aqui hago que la moda sea un int16\n",
     "mode_account=mode_account.astype('int16')\n"
@@ -983,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "20f0faa2",
    "metadata": {},
    "outputs": [
@@ -1021,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "943fcded",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "1118ab59",
    "metadata": {},
    "outputs": [
@@ -1092,12 +1069,12 @@
     "print('Numero de Creditos\\nMaximum value: {}\\nMinimum value {}\\nQuantiles:\\n{}\\nNumber of non-missing modes: {}\\n'\n",
     "      .format(mode_loan.max(), mode_loan.min(),mode_loan.quantile([.1,.2,.3,.4,.5,.6,.7,.8,1]),mode_loan.count().sum()))\n",
     "#aqui hago que la moda sea un int16\n",
-    "mode_loan=mode_loan.astype('int16')\n"
+    "mode_loan=mode_loan.astype('int16')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "13e25c5c",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "ca02ed1d",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "f9a99b23",
    "metadata": {},
    "outputs": [
@@ -1206,12 +1183,12 @@
     "print('Numero de credit inquiries\\nMaximum value: {}\\nMinimum value {}\\nQuantiles:\\n{}\\nNumber of non-missing modes: {}\\n'\n",
     "      .format(mode_crinquiries.max(), mode_crinquiries.min(),mode_crinquiries.quantile([.1,.2,.3,.4,.5,.6,.7,.8,1]),mode_crinquiries.count().sum()))\n",
     "#aqui hago que la moda sea un int16\n",
-    "mode_crinquiries=mode_crinquiries.astype('float64')\n"
+    "mode_crinquiries=mode_crinquiries.astype('float64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "c2b88075",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "aae8abaa",
    "metadata": {},
    "outputs": [],
@@ -1271,6 +1248,27 @@
     "Enero_train.rename(columns={0:\"Moda_edad\"},inplace=True)\n",
     "#si quieres ver que esta pasando quitale el # a la ultima linea\n",
     "#Enero_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "cf28ad44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Enero_train['Age'].isna().sum()"
    ]
   },
   {
@@ -1791,7 +1789,7 @@
     }
    ],
    "source": [
-    "Enero_train['Interest_Rate'] = Enero_train.apply(lambda x: cut_outliers(x['Interest_Rate'],35), axis=1)\n",
+    "Enero_train['Interest_Rate'] = Enero_train.apply(lambda x: cut_outliers(x['Interest_Rate'],37), axis=1)\n",
     "Enero_train['Interest_Rate'].fillna(Enero_train['Moda_ir'],inplace=True)\n",
     "print(Enero_train['Interest_Rate'].isna().sum())\n",
     "fig = plt.figure(1, figsize=(7, 7))\n",
@@ -1817,7 +1815,7 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "9.0\n"
+      "1205.5330000000667\n"
      ]
     }
    ],
@@ -1826,7 +1824,7 @@
     "Enero_train = pd.merge(Enero_train, mode_loan, on=\"Customer_ID\", how=\"left\")\n",
     "Enero_train.rename(columns={0:'Moda_loan'},inplace=True)\n",
     "print(Enero_train['Num_of_Loan'].isna().sum())\n",
-    "print(Enero_train[\"Num_of_Loan\"].quantile(.98))"
+    "print(Enero_train[\"Num_of_Loan\"].quantile(.999))"
    ]
   },
   {
@@ -1905,13 +1903,26 @@
       "75%         28.000000\n",
       "max         67.000000\n",
       "Name: Delay_from_due_date, dtype: float64\n",
-      "0\n"
+      "0\n",
+      "0.01     0.0\n",
+      "0.10     5.0\n",
+      "0.20     8.0\n",
+      "0.30    11.0\n",
+      "0.40    14.0\n",
+      "0.50    18.0\n",
+      "0.60    22.0\n",
+      "0.70    26.0\n",
+      "0.80    30.0\n",
+      "0.90    45.0\n",
+      "0.98    59.0\n",
+      "Name: Delay_from_due_date, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "print(Enero_train['Delay_from_due_date'].describe())\n",
-    "print(Enero_train['Delay_from_due_date'].isna().sum())"
+    "print(Enero_train['Delay_from_due_date'].isna().sum())\n",
+    "print(Enero_train['Delay_from_due_date'].quantile([0.01,.1,.2,.3,.4,.5,.6,.7,.8,.9,.98]))"
    ]
   },
   {
@@ -2622,7 +2633,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "903729c4522b44b480d736c970ec93c3",
+       "model_id": "16f12dd49ad546b595ebafc0ef1b13ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2636,7 +2647,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "857e3130e7e742c1b892600d312d5709",
+       "model_id": "3b5dbf94f5034cd795a7429d5a83dae3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2650,7 +2661,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e3fdd70b7be417bbd1a3e73897c1945",
+       "model_id": "748260bf01204b6197bdf69b2e10926c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2664,7 +2675,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76610e89312a43c7a82b888b910ee790",
+       "model_id": "5adc96c6d7bb43fc96e95c30cee0015c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2696,7 +2707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "30da1e7f",
    "metadata": {},
    "outputs": [],
@@ -2721,7 +2732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
